salt/downloads/bugs/fixes/bug_issue_descriptions/salt-59617
**Description**
Hello, I have an issue w/ Salt napalm proxy issue. Connection to local minion which is on the same machine is working fine, proxy is running also on the same machine.

I am getting the following error when running this test command sudo salt '*' test.version

ubuntu:
    3002.2
sw:
    Minion did not return. [Not connected]
ERROR: Minions returned with non-zero exit code

sw is the napalm proxy

I am also getting this error in /var/log/salt/proxy:
2021-02-25 06:36:53,423 [salt.cli.daemons                                           :537 ][ERROR   ][5154] Proxymodule napalm is missing an init() or a shutdown() or both. Check your proxymodule.  Salt-proxy aborted.


And this one when trying to test connection to the device via napalm .......napalm --vendor ios --user matej --password klklkl 192.168.1.92

Traceback (most recent call last):
File "/home/matej/.local/bin/napalm", line 7, in
from napalm.base.clitools.cl_napalm import main
File "/home/matej/.local/lib/python2.7/site-packages/napalm/init.py", line 5, in
from napalm.base import get_network_driver
File "/home/matej/.local/lib/python2.7/site-packages/napalm/base/init.py", line 22, in
from napalm.base.base import NetworkDriver
File "/home/matej/.local/lib/python2.7/site-packages/napalm/base/base.py", line 17, in
from netmiko import ConnectHandler, NetMikoTimeoutException
File "/home/matej/.local/lib/python2.7/site-packages/netmiko/init.py", line 7, in
from netmiko.ssh_dispatcher import ConnectHandler
File "/home/matej/.local/lib/python2.7/site-packages/netmiko/ssh_dispatcher.py", line 2, in
from netmiko.a10 import A10SSH
File "/home/matej/.local/lib/python2.7/site-packages/netmiko/a10/init.py", line 1, in
from netmiko.a10.a10_ssh import A10SSH
File "/home/matej/.local/lib/python2.7/site-packages/netmiko/a10/a10_ssh.py", line 3, in
from netmiko.cisco_base_connection import CiscoSSHConnection
File "/home/matej/.local/lib/python2.7/site-packages/netmiko/cisco_base_connection.py", line 165
msg = f"Login failed: {self.host}"
^
SyntaxError: invalid syntax

I suppose more likely issue w/ napalm than w/ Salt itself.
Any ides what could be wrong? I have installed napalm according to this link https://napalm.readthedocs.io/en/latest/installation/index.html also with the dependecies for ios.

Thanks
**Setup**
(Please provide relevant configs and/or SLS files (be sure to remove sensitive info).

**Steps to Reproduce the behavior**
(Include debug logs if possible and relevant)

**Expected behavior**
A clear and concise description of what you expected to happen.

**Screenshots**
If applicable, add screenshots to help explain your problem.

**Versions Report**
<details><summary>salt --versions-report</summary>
(Provided by running salt --versions-report. Please also mention any differences in master/minion versions.) 

```
PASTE HERE
```
</details>

**Additional context**
Add any other context about the problem here.
